Task4.5 добавить csrf токен

--- a/spring-security-basic-auth/src/main/resources/templates/login.html
+++ b/spring-security-basic-auth/src/main/resources/templates/login.html
@@ -7,6 +7,9 @@
     Username: <input type="text" name="username">
     <br>
     Password: <input type="password" name="password">
+    <input type="hidden"
+           th:name="${_csrf.parameterName}"
+           th:value="${_csrf.token}"/>
     <br>
     <button type="submit">Sign in</button>
 </form>
